feat: align Android happy mobile device flow
